[package]
name = "crondes"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }

